--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.17",
     "@vueuse/core": "^13.0.0",
+    "dayjs": "^1.11.13",
     "pinia": "^3.0.1",
     "quasar": "^2.18.1",
     "vue": "^3.5.13",
