--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@quasar/extras": "^1.16.17",
     "@vueuse/core": "^13.0.0",
+    "@vueuse/integrations": "^13.0.0",
+    "country-flag-icons": "^1.5.18",
+    "fuse.js": "^7.1.0",
     "dayjs": "^1.11.13",
     "pinia": "^3.0.1",
     "quasar": "^2.18.1",
